--- a/sass/site/compatibility/woocommerce/woocommerce-smallscreen.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce-smallscreen.scss
@@ -55,6 +55,10 @@
 						display: none;
 					}
 				}
+
+				.shipping-calculator-form {
+					text-align: left;
+				}
 			}
 
 			&:nth-child( 2n ) {
